# light-up

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  first.cpp  main.cpp  second.cpp  third.cpp
src/decision_making/: ConstraintSatisfaction.cpp  ConstraintSatisfaction.h  State.h
src/modeling/: Board.cpp  Board.h  Restriction.cpp  Restriction.h  Variable.cpp  Variable.h
src/parser/: parser.cpp  parser.h
tst/: CMakeLists.txt  main.cpp
tst/fixtures/: easy-game-1.txt  easy-game-2.txt  hard-game.txt  temp.txt
